Fixed: Padding of AboutPage on small devices

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,13 +6,23 @@ main {
   width: 94%;
   min-height: 90vh;
 }
+
+@media (max-width: 768px) {
+  .sidebar {
+    width: 0;
+    display: none;
+  }
+  main {
+    width: 100%;
+  }
+}
+
 .sidebar-container {
   padding-top: 6rem;
 }
 .sidebar-content {
   display: flex;
   flex-direction: column;
-  margin-top: 6rem;
   padding: 0rem 0.5rem;
   border-width: 2px;
   border-left-width: 1px;
@@ -24,4 +34,24 @@ main {
 .logo-link {
   margin-top: 0.6rem;
   margin-bottom: 0.6rem;
+}
+
+.navbar-brand {
+  font-weight: 600;
+}
+
+.display-5 {
+  font-size: 2.5rem;
+}
+
+.display-6 {
+  font-size: 1.5rem;
+}
+
+.display-7 {
+  font-size: 1.3rem;
+}
+
+.display-8 {
+  font-size: 1.2rem;
 }
